{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 1043,
  "lineage": "7e01fe3a-661d-5070-e223-a290e59a4eff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ftd-mgmt-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be90da0773700a2e",
            "arn": "arn:aws:ec2:us-east-1:471112506928:elastic-ip/eipalloc-0be90da0773700a2e",
            "association_id": "eipassoc-0043e5e0d7f0887d3",
            "domain": "vpc",
            "id": "eipalloc-0be90da0773700a2e",
            "instance": "i-0915f33bee29a55b0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-015efaa90fa53f450",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-18-206-166-102.compute-1.amazonaws.com",
            "public_ip": "18.206.166.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gwlb-test6 Service FTD Mgmt EIP",
              "app": "service"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service FTD Mgmt EIP",
              "app": "service"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ftd",
            "aws_internet_gateway.mgmt_igw",
            "aws_key_pair.public_key",
            "aws_network_interface.ftd_ccl",
            "aws_network_interface.ftd_data",
            "aws_network_interface.ftd_diagnostic",
            "aws_network_interface.ftd_management",
            "aws_security_group.data-sg",
            "aws_subnet.ccl_subnet",
            "aws_subnet.data_subnet",
            "aws_subnet.mgmt_subnet",
            "aws_vpc.srvc_vpc",
            "data.aws_ami.ftdv",
            "random_string.id",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ade5d40b1a76a54",
            "arn": "arn:aws:ec2:us-east-1:471112506928:instance/i-040bb92dd1b29d8e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040bb92dd1b29d8e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gwlb-test6-0265-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b0c417c548e58bab",
            "private_dns": "ip-10-1-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.100",
            "public_dns": "ec2-3-209-11-240.compute-1.amazonaws.com",
            "public_ip": "3.209.11.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e00eeb01eecf3732",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019af9be7c93d0b18",
            "tags": {
              "Name": "gwlb-test6 App Server"
            },
            "tags_all": {
              "Name": "gwlb-test6 App Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b98588fadb13eb89"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_security_group.app-sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.ami_linux",
            "random_string.id",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ftd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f418ce6049ff4f7",
            "arn": "arn:aws:ec2:us-east-1:471112506928:instance/i-0915f33bee29a55b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0915f33bee29a55b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "gwlb-test6-0265-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-015efaa90fa53f450"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-0745faad390a4b616"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_card_index": 0,
                "network_interface_id": "eni-0b4656f573e18a6a9"
              },
              {
                "delete_on_termination": false,
                "device_index": 3,
                "network_card_index": 0,
                "network_interface_id": "eni-0876f192afb3384bb"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-015efaa90fa53f450",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-18-206-166-102.compute-1.amazonaws.com",
            "public_ip": "18.206.166.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 156,
                "throughput": 0,
                "volume_id": "vol-088de6c7768646b64",
                "volume_size": 52,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011bccb8fbe6fdbf8",
            "tags": {
              "Name": "gwlb-test6 FTD"
            },
            "tags_all": {
              "Name": "gwlb-test6 FTD"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-064d0218a3e6383aa"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_network_interface.ftd_ccl",
            "aws_network_interface.ftd_data",
            "aws_network_interface.ftd_diagnostic",
            "aws_network_interface.ftd_management",
            "aws_security_group.data-sg",
            "aws_subnet.ccl_subnet",
            "aws_subnet.data_subnet",
            "aws_subnet.mgmt_subnet",
            "aws_vpc.srvc_vpc",
            "data.aws_ami.ftdv",
            "random_string.id",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:internet-gateway/igw-080963e296e704f3a",
            "id": "igw-080963e296e704f3a",
            "owner_id": "471112506928",
            "tags": {
              "Name": "gwlb-test6 IGW"
            },
            "tags_all": {
              "Name": "gwlb-test6 IGW"
            },
            "vpc_id": "vpc-0a0564082a96d340e"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mgmt_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:internet-gateway/igw-0b411380607e8bd51",
            "id": "igw-0b411380607e8bd51",
            "owner_id": "471112506928",
            "tags": {
              "Name": "gwlb-test6 Service Mgmt-IGW"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service Mgmt-IGW"
            },
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "dependencies": [
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112506928:loadbalancer/gwy/gwlb-test6-gwlb/07816ea1d5b1af20",
            "arn_suffix": "gwy/gwlb-test6-gwlb/07816ea1d5b1af20",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112506928:loadbalancer/gwy/gwlb-test6-gwlb/07816ea1d5b1af20",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "gwlb-test6-gwlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bfa74422498815a9"
              }
            ],
            "subnets": [
              "subnet-0bfa74422498815a9"
            ],
            "tags": {
              "Name": "gwlb-test6 Service GWLB",
              "app": "service"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service GWLB",
              "app": "service"
            },
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "dependencies": [
            "aws_subnet.data_subnet",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112506928:listener/gwy/gwlb-test6-gwlb/07816ea1d5b1af20/dd5cc67da00f37a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112506928:targetgroup/gwlb-test6-ftdtg/003ace707279218451",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112506928:listener/gwy/gwlb-test6-gwlb/07816ea1d5b1af20/dd5cc67da00f37a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112506928:loadbalancer/gwy/gwlb-test6-gwlb/07816ea1d5b1af20",
            "mutual_authentication": [],
            "port": 0,
            "protocol": "",
            "ssl_policy": "",
            "tags": {
              "Name": "gwlb-test6 Service GWLB Listener",
              "app": "service"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service GWLB Listener",
              "app": "service"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_lb_target_group.ftd",
            "aws_subnet.data_subnet",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ftd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112506928:targetgroup/gwlb-test6-ftdtg/003ace707279218451",
            "arn_suffix": "targetgroup/gwlb-test6-ftdtg/003ace707279218451",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "443",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112506928:targetgroup/gwlb-test6-ftdtg/003ace707279218451",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112506928:loadbalancer/gwy/gwlb-test6-gwlb/07816ea1d5b1af20"
            ],
            "name": "gwlb-test6-ftdtg",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": true,
                "type": "source_ip_dest_ip"
              }
            ],
            "tags": {
              "Name": "gwlb-test6 Service GWLB TG",
              "app": "service"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service GWLB TG",
              "app": "service"
            },
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "dependencies": [
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ftd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112506928:targetgroup/gwlb-test6-ftdtg/003ace707279218451-20240523191308803100000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112506928:targetgroup/gwlb-test6-ftdtg/003ace707279218451",
            "target_id": "10.0.1.59"
          },
          "dependencies": [
            "aws_lb_target_group.ftd",
            "aws_network_interface.ftd_data",
            "aws_security_group.data-sg",
            "aws_subnet.data_subnet",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ftd_ccl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:network-interface/eni-0876f192afb3384bb",
            "attachment": [
              {
                "attachment_id": "eni-attach-01125eb48f3cb0b6b",
                "device_index": 3,
                "instance": "i-0915f33bee29a55b0"
              }
            ],
            "description": "ftd_ccl_if",
            "id": "eni-0876f192afb3384bb",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:1e:83:fb:c2:b1",
            "owner_id": "471112506928",
            "private_dns_name": "ip-10-0-2-201.ec2.internal",
            "private_ip": "10.0.2.201",
            "private_ip_list": [
              "10.0.2.201"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.201"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-064d0218a3e6383aa"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ba64defd4c0d32c1",
            "tags": {
              "Name": "gwlb-test6 Service FTD CCL"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service FTD CCL"
            }
          },
          "dependencies": [
            "aws_security_group.data-sg",
            "aws_subnet.ccl_subnet",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ftd_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:network-interface/eni-0b4656f573e18a6a9",
            "attachment": [
              {
                "attachment_id": "eni-attach-0d26b186af09bf199",
                "device_index": 2,
                "instance": "i-0915f33bee29a55b0"
              }
            ],
            "description": "ftd_data_if",
            "id": "eni-0b4656f573e18a6a9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:bf:ca:b1:69:9b",
            "owner_id": "471112506928",
            "private_dns_name": "ip-10-0-1-59.ec2.internal",
            "private_ip": "10.0.1.59",
            "private_ip_list": [
              "10.0.1.59"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.59"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-064d0218a3e6383aa"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0bfa74422498815a9",
            "tags": {
              "Name": "gwlb-test6 Service FTD Data"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service FTD Data"
            }
          },
          "dependencies": [
            "aws_security_group.data-sg",
            "aws_subnet.data_subnet",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ftd_diagnostic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:network-interface/eni-0745faad390a4b616",
            "attachment": [
              {
                "attachment_id": "eni-attach-06a21eba0aea6a6c2",
                "device_index": 1,
                "instance": "i-0915f33bee29a55b0"
              }
            ],
            "description": "ftd_diag_if",
            "id": "eni-0745faad390a4b616",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:81:fd:7c:c6:25",
            "owner_id": "471112506928",
            "private_dns_name": "ip-10-0-0-14.ec2.internal",
            "private_ip": "10.0.0.14",
            "private_ip_list": [
              "10.0.0.14"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.14"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-064d0218a3e6383aa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011bccb8fbe6fdbf8",
            "tags": {
              "Name": "gwlb-test6 Service FTD Diag"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service FTD Diag"
            }
          },
          "dependencies": [
            "aws_security_group.data-sg",
            "aws_subnet.mgmt_subnet",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ftd_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:network-interface/eni-015efaa90fa53f450",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c0d9aa51ed9f37db",
                "device_index": 0,
                "instance": "i-0915f33bee29a55b0"
              }
            ],
            "description": "ftd_mgmt_if",
            "id": "eni-015efaa90fa53f450",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ae:69:24:e3:d9",
            "owner_id": "471112506928",
            "private_dns_name": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "private_ip_list": [
              "10.0.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-064d0218a3e6383aa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011bccb8fbe6fdbf8",
            "tags": {
              "Name": "gwlb-test6 Service FTD Mgmt"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service FTD Mgmt"
            }
          },
          "dependencies": [
            "aws_security_group.data-sg",
            "aws_subnet.mgmt_subnet",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "app1_igw_route_app1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.1.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9c6e1791089f66a3362780110",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9c6e1791089f66a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-05bde45636ca1dc3a",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.app_igw_route_table",
            "aws_subnet.data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.app_vpc",
            "aws_vpc.srvc_vpc",
            "aws_vpc_endpoint.fw",
            "aws_vpc_endpoint_service.gwlb",
            "aws_vpc_endpoint_subnet_association.fw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "app_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0352163a6a8b1d5301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0352163a6a8b1d530",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-05bde45636ca1dc3a",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.app_route_table",
            "aws_subnet.data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.app_vpc",
            "aws_vpc.srvc_vpc",
            "aws_vpc_endpoint.fw",
            "aws_vpc_endpoint_service.gwlb",
            "aws_vpc_endpoint_subnet_association.fw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gwlbe_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080963e296e704f3a",
            "id": "r-rtb-00396b1c551c5ae481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00396b1c551c5ae48",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.gwlbe_route_table",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "mgmt_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b411380607e8bd51",
            "id": "r-rtb-039b17492c3349d7c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039b17492c3349d7c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mgmt_igw",
            "aws_route_table.mgmt_route_table",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:route-table/rtb-0c9c6e1791089f66a",
            "id": "rtb-0c9c6e1791089f66a",
            "owner_id": "471112506928",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-05bde45636ca1dc3a",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gwlb-test6 IGW Route Table"
            },
            "tags_all": {
              "Name": "gwlb-test6 IGW Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0564082a96d340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:route-table/rtb-0352163a6a8b1d530",
            "id": "rtb-0352163a6a8b1d530",
            "owner_id": "471112506928",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-05bde45636ca1dc3a",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gwlb-test6 App Route Table"
            },
            "tags_all": {
              "Name": "gwlb-test6 App Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0564082a96d340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gwlbe_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:route-table/rtb-00396b1c551c5ae48",
            "id": "rtb-00396b1c551c5ae48",
            "owner_id": "471112506928",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080963e296e704f3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gwlb-test6 GWLBe Route Table"
            },
            "tags_all": {
              "Name": "gwlb-test6 GWLBe Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0564082a96d340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mgmt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:route-table/rtb-039b17492c3349d7c",
            "id": "rtb-039b17492c3349d7c",
            "owner_id": "471112506928",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b411380607e8bd51",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gwlb-test6 Service Mgmt Route Table"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service Mgmt Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ede1b634f3082ded",
            "route_table_id": "rtb-0352163a6a8b1d530",
            "subnet_id": "subnet-019af9be7c93d0b18"
          },
          "dependencies": [
            "aws_route_table.app_route_table",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_igw_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-080963e296e704f3a",
            "id": "rtbassoc-0c8c8d949f1a3c8c4",
            "route_table_id": "rtb-0c9c6e1791089f66a"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.app_igw_route_table",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gwlbe_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c6434c49d22f688",
            "route_table_id": "rtb-00396b1c551c5ae48",
            "subnet_id": "subnet-06f322c4981ddf750"
          },
          "dependencies": [
            "aws_route_table.gwlbe_route_table",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgmt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092db981c0a7a93c9",
            "route_table_id": "rtb-039b17492c3349d7c",
            "subnet_id": "subnet-011bccb8fbe6fdbf8"
          },
          "dependencies": [
            "aws_route_table.mgmt_route_table",
            "aws_subnet.mgmt_subnet",
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:security-group/sg-0b98588fadb13eb89",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b98588fadb13eb89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "gwlb-test6 App SG",
            "name_prefix": "",
            "owner_id": "471112506928",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gwlb-test6 App SG"
            },
            "tags_all": {
              "Name": "gwlb-test6 App SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0564082a96d340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:security-group/sg-064d0218a3e6383aa",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064d0218a3e6383aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "gwlb-test6 Data SG",
            "name_prefix": "",
            "owner_id": "471112506928",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gwlb-test6 Data SG"
            },
            "tags_all": {
              "Name": "gwlb-test6 Data SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:security-group/sg-0441b822d5c92fc8a",
            "description": "Security group that allows SSH inbound and all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0441b822d5c92fc8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gwlb-test6 Mgmt SG",
            "name_prefix": "",
            "owner_id": "471112506928",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gwlb-test6 Mgmt SG"
            },
            "tags_all": {
              "Name": "gwlb-test6 Mgmt SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:subnet/subnet-019af9be7c93d0b18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019af9be7c93d0b18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112506928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlb-test6 App Subnet"
            },
            "tags_all": {
              "Name": "gwlb-test6 App Subnet"
            },
            "vpc_id": "vpc-0a0564082a96d340e"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ccl_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:subnet/subnet-0ba64defd4c0d32c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba64defd4c0d32c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112506928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlb-test6 Service CCL Subnet"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service CCL Subnet"
            },
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "dependencies": [
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:subnet/subnet-0bfa74422498815a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfa74422498815a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112506928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlb-test6 Service Data Subnet"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service Data Subnet"
            },
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "dependencies": [
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gwlbe_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:subnet/subnet-06f322c4981ddf750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f322c4981ddf750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112506928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlb-test6 GWLBe Subnet"
            },
            "tags_all": {
              "Name": "gwlb-test6 GWLBe Subnet"
            },
            "vpc_id": "vpc-0a0564082a96d340e"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:subnet/subnet-011bccb8fbe6fdbf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011bccb8fbe6fdbf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112506928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlb-test6 Service Mgmt Subnet"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service Mgmt Subnet"
            },
            "vpc_id": "vpc-07de556bdbadab8a0"
          },
          "dependencies": [
            "aws_vpc.srvc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:vpc/vpc-0a0564082a96d340e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01a1480b35d92536b",
            "default_route_table_id": "rtb-04a0f6852fcc4a093",
            "default_security_group_id": "sg-0a5925bd8c54865d4",
            "dhcp_options_id": "dopt-06ceba3bcf43f3b74",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0564082a96d340e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a0f6852fcc4a093",
            "owner_id": "471112506928",
            "tags": {
              "Name": "gwlb-test6-App-VPC"
            },
            "tags_all": {
              "Name": "gwlb-test6-App-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "srvc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:vpc/vpc-07de556bdbadab8a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ad4da8335177a5f",
            "default_route_table_id": "rtb-07ac2749190fa628d",
            "default_security_group_id": "sg-0a51a1ff37f9345a0",
            "dhcp_options_id": "dopt-06ceba3bcf43f3b74",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07de556bdbadab8a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ac2749190fa628d",
            "owner_id": "471112506928",
            "tags": {
              "Name": "gwlb-test6 Service VPC"
            },
            "tags_all": {
              "Name": "gwlb-test6 Service VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112506928:vpc-endpoint/vpce-05bde45636ca1dc3a",
            "id": "vpce-05bde45636ca1dc3a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-085cd89fe0e53da0c"
            ],
            "owner_id": "471112506928",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0a20f72ba1db23719",
            "state": "available",
            "subnet_ids": [
              "subnet-06f322c4981ddf750"
            ],
            "tags": {
              "Name": "gwlb-test6 GWLBe"
            },
            "tags_all": {
              "Name": "gwlb-test6 GWLBe"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0a0564082a96d340e"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.data_subnet",
            "aws_vpc.app_vpc",
            "aws_vpc.srvc_vpc",
            "aws_vpc_endpoint_service.gwlb"
          ]
        }
      ]
    }
  ]
}